welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:7: error: recursive variable compteur needs type
      var compteur = compteur+1
                     ^Poucet:10: error: not found: value compteur
  if (compteur > 2){
      ^